<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leave_history"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_team_calendar"
            android:icon="@drawable/ic_menu_team_calendar_black_24dp"
            android:title="@string/team_calendar" />
        <item
            android:id="@+id/nav_company_calendar"
            android:icon="@drawable/ic_menu_company_calendar_black_24dp"
            android:title="@string/company_calendar" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
